<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">司机版</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="announcement">公告：</string>
    <string name="dummyAnnouncement">公告，是指政府、团体对重大事件当众正式公布或者公开宣告，宣布。国务院2012年4月16日发布、2012年7月1日起施行的《党政机关公文处理工作条例》，对公告的使用表述为：“适用于向国内外宣布重要事项或者法定事项”。其中包含两方面的内容：一是向国内外宣布重要事项，公布依据政策、法令采取的重大行动等；二是向国内外宣布法定事项，公布依据法律规定告知国内外的有关重要规定和重大行动等。</string>
    <string name="amount">剩余金额：</string>
    <string name="orders_day">今天接单数量</string>
    <string name="orders_month">本月接单数量</string>
    <string name="incoming_day">今日收入</string>
    <string name="incoming_month">本月收入</string>
    <string name="onDuty">上班</string>
    <string name="offDuty">下班</string>
    <string name="charge_history">充值记录</string>
    <string name="cost_history">消费记录</string>
    <string name="cancel_order">销单</string>
    <string name="noOrderNow">当前无订单</string>
    <string name="alert">提示</string>
    <string name="cancel_order_confirm">销单？</string>
    <string name="cancel">取消</string>
    <string name="personal_info">个人信息</string>
    <string name="modify_password">修改密码</string>
    <string name="settings">设置</string>

</resources>
